# crowdforge

./: README.md  index.html  intelligence.html
01-platform-vision/: vision.md
02-karma-system/: economics-model.md
03-fraud-prevention/: trust-fraud-system.md
05-spawn-protection/: design.md
10-value-pricing/: analysis.md
backend/: .gitignore  conftest.py  manage.py  pyproject.toml
backend/apps/accounts/: api.py  models.py  schemas.py  services.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/activity/: api.py  models.py  schemas.py  services.py
backend/apps/activity/migrations/: 0001_initial.py
backend/apps/contributions/: api.py  apps.py  models.py  schemas.py  services.py
backend/apps/contributions/migrations/: 0001_initial.py
backend/apps/karma/: api.py  apps.py  formulas.py  models.py  schemas.py  services.py
backend/apps/karma/migrations/: 0001_initial.py
backend/apps/karma/tests/: test_formulas.py
backend/apps/projects/: api.py  models.py  schemas.py  services.py
backend/apps/projects/migrations/: 0001_initial.py
backend/apps/search/: api.py  schemas.py  services.py
backend/apps/tasks/: api.py  models.py  schemas.py  services.py
backend/apps/tasks/management/commands/: expire_task_claims.py
backend/apps/tasks/migrations/: 0001_initial.py
backend/apps/voting/: api.py  models.py  schemas.py  services.py
backend/apps/voting/migrations/: 0001_initial.py
backend/core/: constants.py  events.py  exceptions.py  middleware.py  permissions.py
backend/crowdforge/: asgi.py  settings.py  urls.py  wsgi.py
(+69 files in other folders)
